# crrc_valve_opening

./: Makefile  README.md  pyproject.toml  requirements.txt
data/: demo.csv  step1.csv  step2.csv
src/crrc_valve_opening/: __init__.py
src/crrc_valve_opening/app/: gradio_app.py
